Backport into build-201003230706-5.1.43sp1

> ------------------------------------------------------------
> revno: 3329.2.3
> revision-id: svoj@sun.com-20100122095702-e18xzhmyll1e5s25
> parent: svoj@sun.com-20100122095632-j8ssd5csnlzp1zpf
> committer: Sergey Vojtovich <svoj@sun.com>
> branch nick: mysql-5.1-bugteam
> timestamp: Fri 2010-01-22 13:57:02 +0400
> message:
>   Applying InnoDB snapshot, fixes BUG#46193.
>   
>   Detailed revision comments:
>   
>   r6424 | marko | 2010-01-12 12:22:19 +0200 (Tue, 12 Jan 2010) | 16 lines
>   branches/5.1: In innobase_initialize_autoinc(), do not attempt to read
>   the maximum auto-increment value from the table if
>   innodb_force_recovery is set to at least 4, so that writes are
>   disabled. (Bug #46193)
>   
>   innobase_get_int_col_max_value(): Move the function definition before
>   ha_innobase::innobase_initialize_autoinc(), because that function now
>   calls this function.
>   
>   ha_innobase::innobase_initialize_autoinc(): Change the return type to
>   void.  Do not attempt to read the maximum auto-increment value from
>   the table if innodb_force_recovery is set to at least 4.  Issue
>   ER_AUTOINC_READ_FAILED to the client when the auto-increment value
>   cannot be read.
>   
>   rb://144 by Sunny, revised by Marko